{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 120,
  "lineage": "3048aea7-0780-3b28-d9bb-4f84ce2f12a4",
  "resources": [
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_sever_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "web-server-eu1w-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/publicIPAddresses/web-server-eu1w-public-ip"
              }
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "location": "westeurope",
            "name": "web-server-eu1w-lb",
            "resource_group_name": "web-rg-eu1w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_sever_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "web-server-us2w-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip"
              }
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "location": "westus2",
            "name": "web-server-us2w-lb",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/backendAddressPools/web-server-eu1w-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-backend-pool",
            "resource_group_name": "web-rg-eu1w"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_lb.web_sever_lb",
            "module.location_eu1w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-backend-pool",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_sever_lb",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/probes/web-server-eu1w-lb-http-prob",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-http-prob",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-eu1w"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_lb.web_sever_lb",
            "module.location_eu1w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-prob",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-prob",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_sever_lb",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/backendAddressPools/web-server-eu1w-lb-backend-pool",
            "backend_port": 80,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/frontendIPConfigurations/web-server-eu1w-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-eu1w-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/loadBalancingRules/web-server-eu1w-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb",
            "name": "web-server-eu1w-lb-http-rule",
            "probe_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/loadBalancers/web-server-eu1w-lb/probes/web-server-eu1w-lb-http-prob",
            "protocol": "Tcp",
            "resource_group_name": "web-rg-eu1w"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_lb.web_sever_lb",
            "module.location_eu1w.azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "module.location_eu1w.azurerm_lb_probe.web_server_lb_http_probe",
            "module.location_eu1w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "backend_port": 80,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/frontendIPConfigurations/web-server-us2w-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-us2w-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-rule",
            "probe_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-prob",
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_sever_lb",
            "module.location_us2w.azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "module.location_us2w.azurerm_lb_probe.web_server_lb_http_probe",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jump_server_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/networkInterfaces/jump-eu1w-nic",
            "ip_configuration": [
              {
                "name": "jump-eu1w-ip",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/publicIPAddresses/jump-eu1w-public-ip",
                "subnet_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet/subnets/jump-server-eu1w-3.0.0.0-subnet"
              }
            ],
            "location": "westeurope",
            "name": "jump-eu1w-nic",
            "network_security_group_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/networkSecurityGroups/jump-eu1w-nsg",
            "private_ip_address": "3.0.0.4",
            "private_ip_addresses": [
              "3.0.0.4"
            ],
            "resource_group_name": "jump-server-eu1w-rg"
          },
          "dependencies": [
            "azurerm_network_security_group.jump_server_nsg",
            "azurerm_public_ip.jump_server_public_ip",
            "azurerm_resource_group.jump_server_rg",
            "azurerm_subnet.jump_server_subnet",
            "azurerm_virtual_network.jump_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jump_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/networkSecurityGroups/jump-eu1w-nsg",
            "location": "westeurope",
            "name": "jump-eu1w-nsg",
            "resource_group_name": "jump-server-eu1w-rg",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/networkSecurityGroups/web-server-eu1w-nsg",
            "location": "westeurope",
            "name": "web-server-eu1w-nsg",
            "resource_group_name": "web-rg-eu1w",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "location": "westus2",
            "name": "web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jump_server_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/networkSecurityGroups/jump-eu1w-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "jump-eu1w-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "jump-server-eu1w-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "azurerm_network_security_group.jump_server_nsg",
            "azurerm_resource_group.jump_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/networkSecurityGroups/web-server-eu1w-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-eu1w-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "web-rg-eu1w",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.location_eu1w.azurerm_network_security_group.web_server_nsg",
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-us2w-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "web-rg-us2w",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jump_server_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/publicIPAddresses/jump-eu1w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.114.224.200",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jump-eu1w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "jump-server-eu1w-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "learning-mustafa-web",
            "fqdn": "learning-mustafa-web.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/publicIPAddresses/web-server-eu1w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.94.224.248",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "web-server-eu1w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg-eu1w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "learning-mustafa-web",
            "fqdn": "learning-mustafa-web.westus2.cloudapp.azure.com",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.229.27.200",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-us2w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jump_server_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "3.0.0.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet/subnets/jump-server-eu1w-3.0.0.0-subnet",
            "name": "jump-server-eu1w-3.0.0.0-subnet",
            "resource_group_name": "jump-server-eu1w-rg",
            "virtual_network_name": "jump-server-eu1w-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg",
            "azurerm_virtual_network.jump_server_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "2.0.1.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet/subnets/web-server-eu1w-2.0.1.0-subnet",
            "name": "web-server-eu1w-2.0.1.0-subnet",
            "network_security_group_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/networkSecurityGroups/web-server-eu1w-nsg",
            "resource_group_name": "web-rg-eu1w",
            "virtual_network_name": "web-server-eu1w-vnet"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_network_security_group.web_server_nsg",
            "module.location_eu1w.azurerm_resource_group.web_server_rg",
            "module.location_eu1w.azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "2.0.2.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet/subnets/web-server-eu1w-2.0.2.0-subnet",
            "name": "web-server-eu1w-2.0.2.0-subnet",
            "resource_group_name": "web-rg-eu1w",
            "virtual_network_name": "web-server-eu1w-vnet"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_network_security_group.web_server_nsg",
            "module.location_eu1w.azurerm_resource_group.web_server_rg",
            "module.location_eu1w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-1.0.1.0-subnet",
            "name": "web-server-us2w-1.0.1.0-subnet",
            "network_security_group_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-1.0.2.0-subnet",
            "name": "web-server-us2w-1.0.2.0-subnet",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "jump_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "3.0.0.0/24"
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet",
            "location": "westeurope",
            "name": "jump-server-eu1w-vnet",
            "resource_group_name": "jump-server-eu1w-rg"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_eu1w",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "2.0.0.0/22"
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet",
            "location": "westeurope",
            "name": "web-server-eu1w-vnet",
            "resource_group_name": "web-rg-eu1w"
          },
          "dependencies": [
            "module.location_eu1w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet",
            "location": "westus2",
            "name": "web-server-us2w-vnet",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "jump_server_peer_web_eu1w",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet/virtualNetworkPeerings/jump-eu1w-peer-web-eu1w",
            "name": "jump-eu1w-peer-web-eu1w",
            "remote_virtual_network_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet",
            "resource_group_name": "jump-server-eu1w-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "jump-server-eu1w-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg",
            "azurerm_subnet.jump_server_subnet",
            "azurerm_virtual_network.jump_server_vnet",
            "module.location_eu1w.azurerm_resource_group.web_server_rg",
            "module.location_eu1w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "jump_server_peer_web_us2w",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet/virtualNetworkPeerings/jump-eu1w-peer-web-us2w",
            "name": "jump-eu1w-peer-web-us2w",
            "remote_virtual_network_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet",
            "resource_group_name": "jump-server-eu1w-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "jump-server-eu1w-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg",
            "azurerm_subnet.jump_server_subnet",
            "azurerm_virtual_network.jump_server_vnet",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "web_eu1w_peer_jump_server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-eu1w/providers/Microsoft.Network/virtualNetworks/web-server-eu1w-vnet/virtualNetworkPeerings/web-eu1w-peer-jump-eu1w",
            "name": "web-eu1w-peer-jump-eu1w",
            "remote_virtual_network_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet",
            "resource_group_name": "web-rg-eu1w",
            "use_remote_gateways": false,
            "virtual_network_name": "web-server-eu1w-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg",
            "azurerm_subnet.jump_server_subnet",
            "azurerm_virtual_network.jump_server_vnet",
            "module.location_eu1w.azurerm_resource_group.web_server_rg",
            "module.location_eu1w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "web_us2w_peer_jump_server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/virtualNetworkPeerings/web-us2w-peer-jump-eu1w",
            "name": "web-us2w-peer-jump-eu1w",
            "remote_virtual_network_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/jump-server-eu1w-rg/providers/Microsoft.Network/virtualNetworks/jump-server-eu1w-vnet",
            "resource_group_name": "web-rg-us2w",
            "use_remote_gateways": false,
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.jump_server_rg",
            "azurerm_subnet.jump_server_subnet",
            "azurerm_virtual_network.jump_server_vnet",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    }
  ]
}